--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
  
 <!--
  
-                         _            
-  _ __ ___    ___   ___ | |__    __ _  _ __  (_) ___   ___ 
- | '_ ` _ \  / _ \ / __|| '_ \  / _` || '_ \ | |/ __| / _ \
- | | | | | ||  __/| (__ | | | || (_| || | | || |\__ \|  __/
- |_| |_| |_| \___| \___||_| |_| \__,_||_| |_||_||___/ \___|
-made by mechanise.tumblr.com 
-do not remove credit
+mechanise.tumblr.com
 -->
  
  
@@ -147,6 +141,10 @@ h1 {
     text-align:center;
     color:{color:text};
     text-transform:uppercase;
+    background-color:{color:accent};
+    padding: 5px;
+    line-height:160%;
+    margin-top:0px;
 }
 
 /*BLOCKQUOTE*/
@@ -273,7 +271,7 @@ blockquote {
     line-height: 150%;
     width: 400px;
     margin-left:85px;
-    margin-top:30px;
+    margin-top:28px;
     padding: 10px;
     text-transform: lowercase;
     letter-spacing: 0px;
@@ -302,7 +300,7 @@ blockquote {
  #footer {
      position:absolute;
      left:50%;
-     margin-top:30px;
+     margin-top:130px;
      width:500px;
      margin-left:-250px;
  }
@@ -390,47 +388,37 @@ blockquote {
 }
  
 /*TAGS*/
-#tags a {
-    width:500px;
-    line-height:150%;
+#tags {
+    width:480px;
+    margin-left:20px;
     text-align:left;
+}
+#tags a {
+    line-height:150%;
     padding-top:7px;
-    text-transform: lowercase;
     font-size:12px;
     color: {color:tags}!important;
 }
  
 /*NOTES*/
 .notes {
-    background-color:#FFFFFF;
+    background-color:{color:bg};
     text-transform:normal;
     letter-spacing:0px;
     font-size:12px;
-    margin-top:20px;
+    margin-top:120px;
     font-style:normal;
     margin-left:-20px;
     text-align:left;
     line-height:30px;
-    border-bottom:1px solid #D8D8D8;
+    border-bottom:1px solid {color:borders};
 }
  
-.notes img{
-padding:2px;
-border:1px solid #eee;
-margin-bottom:-4px;
--webkit-transition:all 0.5s ease-in-out;
--moz-transition:all 0.5s ease-in-out;
--o-transition:all 0.5s ease-in-out;
--ms-transition:all 0.5s ease-in-out;
-transition:all 0.5s ease-in-out;
+.notes img {
+    padding:2px;
+    border:1px solid #eee;
+    margin-bottom:-4px;
 }
- 
-.notes img:hover {opacity: 0.6;
--webkit-transition:all 0.5s ease-in-out;
-    -moz-transition:all 0.5s ease-in-out;
-    -o-transition:all 0.5s ease-in-out;
-    -ms-transition:all 0.5s ease-in-out;
-    transition:all 0.5s ease-in-out;}
  
  
 /* --- QUOTE ---*/
@@ -506,29 +494,25 @@ transition:all 0.5s ease-in-out;
     font-weight:bold;
     text-align:right;
     padding:6px;
-    background:#FAFAFA;
-    text-transform:lowercase;
 }
        
- .question {
-    letter-spacing:0px;
-    margin-top:-12px;
-    font-style:italic;
-    padding:4px;
-    background:#FAFAFA;
+ #question {
+    letter-spacing:2px;
+    padding: 10px 5px 10px 5px;
+    background:{color:accent};
     text-align:right;
     color:{color:Text};
-    border-bottom:1px solid #E6E6E6;
-    }
+}
    
-    .answer {
+.answer {
+    font-family: {text:body};
     width:500px;
     letter-spacing:0px;
     text-align:justify;
     padding-top:5px;
     margin-bottom:1px;
     color:{color:Text};
-    }
+}
  
 /* ---CHAT---*/
 .chat {
@@ -537,11 +521,11 @@ transition:all 0.5s ease-in-out;
 }
  
  .odd {
-    padding-left:4px;
+    padding:7px;
     background:{color:accent};
  }
  .even {
-    padding-left:4px;
+    padding-left:7px;
  }
  
 /*---AUDIO---*/
@@ -594,7 +578,7 @@ transition:all 0.5s ease-in-out;
 {block:Posts}<div id="posts">
  
  
-{block:Text}<h1>{block:Title}{Title}{/block:Title}</h1>{Body}{/block:Text}
+{block:Text}{block:Title}<h1>{Title}</h1>{/block:Title}{Body}{/block:Text}
  
  
 {block:Photo}{LinkOpenTag}<img src="{PhotoURL-500}">{LinkCloseTag}{block:Caption}{Caption}{/block:Caption}{/block:Photo}
@@ -606,7 +590,7 @@ transition:all 0.5s ease-in-out;
 {block:Photoset}{Photoset-500}{block:Caption}{Caption}{/block:Caption}{/block:Photoset}
  
  
-{block:Quote}<div class="quote">" {Quote} "</div>{block:Source} <div class="quotesource">—{Source}</div>{/block:Source}{/block:Quote}
+{block:Quote}<div class="quote">&ldquo; {Quote} &bdquo;</div>{block:Source} <div class="quotesource">&mdash;&nbsp;{Source}</div>{/block:Source}{/block:Quote}
  
  
 {block:Audio}
@@ -617,7 +601,7 @@ transition:all 0.5s ease-in-out;
     </div>
     <div class="audio-info">
         {block:TrackName}<b>{TrackName}</b>{/block:TrackName}
-        {block:Artist} - <b>Artist:</b> {Artist}<br>{/block:Artist}
+        {block:Artist} - {Artist}<br>{/block:Artist}
         {block:Album}<i>Album: {Album}</i>{/block:Album}
     </div>
 </div>
@@ -639,7 +623,10 @@ transition:all 0.5s ease-in-out;
 {/block:Chat}
  
  
-{block:Answer}<div id="question"><span style="text-transform:uppercase;font-size:12px;font-style:italic;">— {Asker}: </span>{Question}</div><left> <font face="cambria">{Answer}</font>{/block:Answer}
+{block:Answer}
+<div id="question">
+    <span style="text-transform:uppercase;">{Asker}</span>&nbsp;whispers&nbsp;<span style="font-weight:700;font-size:18px;">&ldquo;</span>{Question}<span style="font-weight:700;font-size:18px;">&bdquo;</span></div>{Answer}
+{/block:Answer}
  
  
 <div id="info">
@@ -652,12 +639,12 @@ transition:all 0.5s ease-in-out;
         {block:ContentSource}
         |&nbsp;&nbsp;<a href="{SourceURL}">©</a>
         {/block:ContentSource}
-        |<a href="{Permalink}">&nbsp;&nbsp;+{NoteCount}</a>
+        {block:NoteCount}|<a href="{Permalink}">&nbsp;&nbsp;+{NoteCount}</a>{/block:NoteCount}
     </div>
     <div id="divide2"></div>
     {block:HasTags}
         <div id="tags">
-            {block:Tags}<a href="{TagURL}">#{Tag}</a> {/block:Tags}
+            {block:Tags}<a href="{TagURL}">#{Tag}</a>&nbsp;&nbsp;{/block:Tags}
         </div>
     {/block:HasTags}
 </div>
