--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@ mechanise.tumblr.com
 <meta name="color:borders" content="#E0E0E0"/>
  
 <meta name="image:sidebar" content=""/>
+<meta name="image:bg image" content=""/>
  
 <meta name="text:body" content="Roboto"/>
 <meta name="text:postspacing" content="150"/>
+<meta name="text:postbg" content="rgba(0,0,0,0)" />
 <meta name="text:link1" content="">
 <meta name="text:link1 url" content="/">    
 <meta name="text:link2" content="">
@@ -40,6 +42,7 @@ mechanise.tumblr.com
 <meta name="text:link4 url" content="/">
  
 <meta name="if:showcaption" content="1"/>
+<meta name="if:showtags" content="0"/>
 <meta name="if:sidebarimg" content="0"/>
 <meta name="if:500px" content="0"/>
 <meta name="if:400px" content="1"/>
@@ -100,6 +103,14 @@ mechanise.tumblr.com
 /*-----BODY-----*/
 body {
     background-color:{color:bg};
+    background-image: url({image:bg image});
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    -ms-background-size: cover;
+    -o-background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    background-size: cover;
     font-family:{text:body}; 
     font-size:14px;
     padding-bottom:5px;
@@ -536,7 +547,7 @@ margin: 10px 0 0 95px;
     padding-bottom:20px;
     padding:10px;
     margin-bottom:{text:postspacing}px;
-    background-color:{color:Post};
+    background-color:{text:postbg};
     border: 1px solid;
     float:center;
     overflow:hidden;
@@ -876,9 +887,11 @@ margin: 10px 0 0 95px;
     </div>
     <div id="divide2"></div>
     {block:HasTags}
+    {block:ifShowtags}
         <div id="tags">
             {block:Tags}<a href="{TagURL}">#{Tag}</a>&nbsp;&nbsp;{/block:Tags}
         </div>
+    {/block:ifShowtags}
     {/block:HasTags}
 </div>
 </div>
