--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!--
  
 mechanise.tumblr.com
+don't remove credit sweetie (:
 -->
  
  
@@ -757,26 +758,27 @@ margin: 10px 0 0 95px;
  }
  
 /*---AUDIO---*/
-#maker {
+#c {
     float:right;
     position:fixed;
     bottom:5px;
-    right:0px;
-    padding:7px;
+    right:5px;
+    padding:3px 0px 3px 0px;
     font-size:10px;
     text-align:right;
     line-height:150%;
     text-transform:uppercase;
     font-weight:700;
+    background-color:{color:bg};
 }
  
-#maker a {
+#c a {
     padding:7px;
     color:#000;
     text-decoration:none!important;
 }
 
-#maker a:hover {
+#c a:hover {
     font-style:none!important;
 }
  
@@ -929,7 +931,7 @@ margin: 10px 0 0 95px;
 </div>
  
  
-<div id="maker"><a href="http://mechanise.tumblr.com">M</a></div></center>
+<div id="c"><a href="http://mechanise.tumblr.com">M</a></div></center>
  
  
 <!--DON'T DELETE THIS CODE IF YOU DON'T WANT TO SEE THE SOURCE UNDER THE IMAGE/TEXT-->
