--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ margin: 10px 0 0 95px;
     font-weight: 700;
     letter-spacing:2px;
     line-height: 100%;
-    color: {color:bodytext};
+    color: {color:text};
  }
  /* LINES */
  #separator { /* after title */
