--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ don't remove credit sweetie (:
 <meta name="text:body" content="Roboto"/>
 <meta name="text:postspacing" content="150"/>
 <meta name="text:postbg" content="rgba(0,0,0,0)" />
-<meta name="text:link1" content="">
-<meta name="text:link1 url" content="/">    
+<meta name="text:link1" content="ask">
+<meta name="text:link1 url" content="/ask">    
 <meta name="text:link2" content="">
 <meta name="text:link2 url" content="/">
 <meta name="text:link3" content="">
@@ -792,8 +792,6 @@ margin: 10px 0 0 95px;
      
          <div id="separator2"></div>
         <div class="links">
-            <a href="/">home</a>
-            <a href="/ask">ask</a>
             <a href="{text:link1 url}">{text:link1}</a>
             <a href="{text:link2 url}">{text:link2}</a>
             <a href="{text:link3 url}">{text:link3}</a>
