--- a/index.html
+++ b/index.html
@@ -191,6 +191,10 @@ blockquote {
     font-family: courier;
  }
  
+ ul {
+     list-style-type:square;
+ }
+ 
 /*-----SIDEBAR-----*/
  
 #sidebar {
