--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@ margin: 10px 0 0 95px;
 </div>
  
  
-<div id="c"><a href="http://mechanise.tumblr.com">M</a></div></center>
+<div id="c"><a href="http://mechanise.tumblr.com" title="theme by mechanise">M</a></div></center>
  
  
 <!--DON'T DELETE THIS CODE IF YOU DON'T WANT TO SEE THE SOURCE UNDER THE IMAGE/TEXT-->
