--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
  
 <!--
- 
-mechanise.tumblr.com
+theme by mechanise.tumblr.com
 don't remove credit sweetie (:
 -->
  
@@ -60,8 +59,8 @@ don't remove credit sweetie (:
     $(document).ready(function(){
     $("[title]").style_my_tooltips({
     tip_follows_cursor:true,
-    tip_delay_time:200,
-    tip_fade_speed:300
+    tip_delay_time:0,
+    tip_fade_speed:0
     }
     );
     });
