--- a/index.html
+++ b/index.html
@@ -651,13 +651,24 @@ margin: 10px 0 0 95px;
     font-family:{text:body};
     font-style:normal;
     line-height:17px;
-    margin-bottom:15px;
+   margin-top: -25px;
+  padding-left: 15px;
     text-transform:normal;
     text-align:left;
     font-weight:normal;
     font-style:none;
     color:{color:text};
 }
+ 
+.quote::before {
+      content: open-quote;
+      font-size: 72px;
+      display: inline-block;
+      position: absolute;
+      margin-top: 45px;
+      margin-left: -20px;
+}
+
  
 .quotesource {
     font-size:14px;
@@ -668,7 +679,6 @@ margin: 10px 0 0 95px;
     margin-bottom:5px;
     color:{color:text};
 }
- 
  
 /* --- AUDIO ---*/
  .audio {
