--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@ margin: 10px 0 0 95px;
 {block:ifShowCaption}{block:Caption}{Caption}{/block:Caption}{/block:ifShowCaption}{/block:Photoset}
  
  
-{block:Quote}<div class="quote">&ldquo; {Quote} &bdquo;</div>{block:Source} <div class="quotesource">&mdash;&nbsp;{Source}</div>{/block:Source}{/block:Quote}
+{block:Quote}<div class="quote">&nbsp;&nbsp;&nbsp;&nbsp;{Quote}</div>{block:Source} <div class="quotesource">&mdash;&nbsp;{Source}</div>{/block:Source}{/block:Quote}
  
  
 {block:Audio}
