--- a/index.html
+++ b/index.html
@@ -783,6 +783,58 @@ margin: 10px 0 0 95px;
 #c a:hover {
     font-style:none!important;
 }
+
+#tumblr_lightbox {
+    background-color: rgba(255, 255, 255, 0.7)!important;
+}
+
+#tumblr_lightbox_left_image, #tumblr_lightbox_center_image, #tumblr_lightbox_right_image {
+    opacity:1!important;
+    background-color:#fff!important;
+    -webkit-border-radius:10px!important;
+    -moz-border-radius:10px!important;
+    border-radius:10px!important;
+    overflow:hidden!important; 
+    -webkit-box-shadow:none!important;
+    -moz-box-shadow:none!important;
+    box-shadow:none!important;
+}
+
+#tumblr_lightbox img {
+    display:none;
+}
+
+.pns_lightbox_container_border {
+  border-radius: initial;
+  padding: 6px;
+}
+
+.pns_lightbox_close {
+  top: 10px !important;
+  right: 5px !important;
+  font-size: 20px !important;
+}
+
+.pns_lightbox_close .close-x {
+  -webkit-filter: invert(60%);
+  filter: invert(60%);
+  height: 25px;
+
+}
+
+.pns_lightbox_close .close-x:hover {
+  top: -1px; 
+}
+
+.pns_lightbox_container {
+  background-color: #f7f9f9 !important;
+}
+
+.pns_lightbox_container_border {
+  border: none;
+  background-color: rgba(0,0,0,0);
+}
+ 
  
 {CustomCSS}</style></head><body>
 <!--
